--- a/package.json
+++ b/package.json
@@ -2,7 +2,21 @@
     "name": "lanke",
     "version": "0.1.0",
     "author": "LAN Xingcan",
+    "main": "built/index.js",
+    "typings": "built/index.d.ts",
+    "scripts": {
+        "test": "./node_modules/.bin/mocha -r ts-node/register test/test.ts"
+    },
     "devDependencies": {
+        "@types/chai": "^4.0.4",
+        "@types/mocha": "^2.2.43",
+        "chai": "^4.1.2",
+        "mocha": "^4.0.1",
+        "ts-node": "^3.3.0",
+        "tslib": "^1.8.0",
         "typescript": "^2.4.0"
+    },
+    "peerDependencies": {
+        "tslib": "^1.8.0"
     }
 }
