--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "mocha": "^4.0.1",
         "ts-node": "^3.3.0",
         "tslib": "^1.8.0",
-        "typescript": "^2.4.0"
+        "typescript": "^2.4.0",
+        "nyc":"^11.2.1"
     },
     "peerDependencies": {
         "tslib": "^1.8.0"
