--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "sourceMap": true,
         "lib":["es2015.collection", "es5", "es2015.iterable"],
         "importHelpers": true,
-        "noEmitHelpers": true
+        "noEmitHelpers": true,
+        "strictNullChecks": true
     },
     "include": [
         "src/*.ts"
